@@ -29,6 +29,43 @@
 
 #define HTTP_WS_PROTOCOL "wifiswitch"
 
+/*
+ *     0                   1                   2                   3
+ *     0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1
+ *    +-+-+-+-+-------+-+-------------+-------------------------------+
+ *    |F|R|R|R| opcode|M| Payload len |    Extended payload length    |
+ *    |I|S|S|S|  (4)  |A|     (7)     |             (16/64)           |
+ *    |N|V|V|V|       |S|             |   (if payload len==126/127)   |
+ *    | |1|2|3|       |K|             |                               |
+ *    +-+-+-+-+-------+-+-------------+ - - - - - - - - - - - - - - - +
+ *    |     Extended payload length continued, if payload len == 127  |
+ *    + - - - - - - - - - - - - - - - +-------------------------------+
+ *    |                               |Masking-key, if MASK set to 1  |
+ *    +-------------------------------+-------------------------------+
+ *    | Masking-key (continued)       |          Payload Data         |
+ *    +-------------------------------- - - - - - - - - - - - - - - - +
+ *    :                     Payload Data continued ...                :
+ *    + - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
+ *    |                     Payload Data continued ...                |
+ *    +---------------------------------------------------------------+
+ */
+ 
+struct http_ws_frame
+{
+	bool fin;
+	unsigned char rsv;
+	uint8_t opcode:4;
+	uint8_t mask:1;
+	uint64_t payload_len:7;
+	union
+	{
+		uint16_t ext_payload_len16;
+		uint64_t ext_payload_len64;
+	};
+	uint32_t masking_key;
+	char* payloadData;
+};
+
 extern signed int http_ws_handler(struct http_request *request);
 
 #endif
